--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     <meta property="twitter:image" content="https://sakib-maho.github.io/sakib-portfolio/profile-photo-hires.jpg">
     <meta property="twitter:image:alt" content="Md Robiul Islam SAKIB - Professional Photo">
     
-    <!-- Favicon -->
+    <!-- Favicon - SVG First for Modern Browsers -->
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
     <link rel="icon" type="image/png" sizes="48x48" href="favicon-48x48.png">
-    <link rel="shortcut icon" href="favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon-48x48.png">
     
     <!-- External Stylesheets -->
