Improve text visibility: Change section subtitle color from #666 to #333 with font-weight 500 for better readability

--- a/index.html
+++ b/index.html
@@ -194,11 +194,12 @@
         .section-subtitle {
             text-align: center;
             font-size: 1.2rem;
-            color: #666;
+            color: #333;
             margin-bottom: 4rem;
             max-width: 600px;
             margin-left: auto;
             margin-right: auto;
+            font-weight: 500;
         }
 
         /* About Section */
